b/317922302 Enable usage without SCC subscription (#239)
Add alternate catalog implementation that uses `effectiveIamPolicies.batchGet` instead of `analyzeIamPolicy` to analyze role bindings. This implementation won't be subject to the upcoming pricing changes [1] for the Policy Analyzer API and can be used without an SCC subscription.

Using this catalog requires the following configuration options:

```
  RESOURCE_CATALOG: AssetInventory    # <-- enables the Asset Inventory API-based implementation
  RESOURCE_CUSTOMER_ID: C00xxxxx      # <-- Cloud Identity/Workspace customer ID
```

Unless these configuration options are present, the application uses the Policy Analyzer API as before.

The Asset Inventory API-based implementation is subject to the following limitations:

1. It only considers direct group memberships when analyzing role bindings. Indirect group memberships are ignored.
2. The auto-completer returns all projects managed by the application, not only those accessible by the user (same behavior as when using the `AVAILABLE_PROJECTS_QUERY` options).

[1] https://cloud.google.com/policy-intelligence/docs/billing-questions#pricing-changes