@@ -28,6 +28,7 @@ import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.JsonObjectParser;
 import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.GenericData;
+import com.google.api.services.cloudasset.v1.model.Asset;
 import com.google.auth.oauth2.ComputeEngineCredentials;
 import com.google.auth.oauth2.GoogleCredentials;
 import com.google.auth.oauth2.ImpersonatedCredentials;
@@ -36,13 +37,16 @@ import com.google.solutions.jitaccess.core.ApplicationVersion;
 import com.google.solutions.jitaccess.core.UserId;
 import com.google.solutions.jitaccess.core.catalog.RegexJustificationPolicy;
 import com.google.solutions.jitaccess.core.catalog.TokenSigner;
+import com.google.solutions.jitaccess.core.catalog.project.AssetInventoryRepository;
 import com.google.solutions.jitaccess.core.catalog.project.MpaProjectRoleCatalog;
 import com.google.solutions.jitaccess.core.catalog.project.PolicyAnalyzerRepository;
+import com.google.solutions.jitaccess.core.catalog.project.ProjectRoleRepository;
 import com.google.solutions.jitaccess.core.clients.*;
 import com.google.solutions.jitaccess.core.notifications.MailNotificationService;
 import com.google.solutions.jitaccess.core.notifications.NotificationService;
 import com.google.solutions.jitaccess.core.notifications.PubSubNotificationService;
 import com.google.solutions.jitaccess.web.rest.ApiResource;
+import jakarta.enterprise.inject.Instance;
 import jakarta.enterprise.inject.Produces;
 import jakarta.inject.Singleton;
 import jakarta.ws.rs.core.UriBuilder;
@@ -51,6 +55,8 @@ import jakarta.ws.rs.core.UriInfo;
 import java.io.IOException;
 import java.net.UnknownHostException;
 import java.time.Duration;
+import java.util.List;
+import java.util.concurrent.Executor;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -138,17 +144,37 @@ public class RuntimeEnvironment {
         this.projectId = (String) projectMetadata.get("projectId");
         this.projectNumber = projectMetadata.get("numericProjectId").toString();
 
-        this.applicationCredentials = GoogleCredentials.getApplicationDefault();
-        this.applicationPrincipal = new UserId(((ComputeEngineCredentials) this.applicationCredentials).getAccount());
+        var defaultCredentials = (ComputeEngineCredentials)GoogleCredentials.getApplicationDefault();
+        this.applicationPrincipal = new UserId(defaultCredentials.getAccount());
+
+        if (defaultCredentials.getScopes().containsAll(this.configuration.getRequiredOauthScopes())) {
+          //
+          // Default credential has all the right scopes, use it as-is.
+          //
+          this.applicationCredentials = defaultCredentials;
+        }
+        else {
+          //
+          // Extend the set of scopes to include required non-cloud APIs by
+          // letting the service account impersonate itself.
+          //
+          this.applicationCredentials = ImpersonatedCredentials.create(
+            defaultCredentials,
+            this.applicationPrincipal.email,
+            null,
+            this.configuration.getRequiredOauthScopes().stream().toList(),
+            0);
+        }
 
         logAdapter
           .newInfoEntry(
             LogEvents.RUNTIME_STARTUP,
-            String.format("Running in project %s (%s) as %s, version %s",
+            String.format("Running in project %s (%s) as %s, version %s, using %s catalog",
               this.projectId,
               this.projectNumber,
               this.applicationPrincipal,
-              ApplicationVersion.VERSION_STRING))
+              ApplicationVersion.VERSION_STRING,
+              this.configuration.catalog.getValue()))
           .write();
       }
       catch (IOException e) {
@@ -174,21 +200,15 @@ public class RuntimeEnvironment {
         if (impersonateServiceAccount != null && !impersonateServiceAccount.isEmpty()) {
           //
           // Use the application default credentials (ADC) to impersonate a
-          // service account. This can be used when using user credentials as ADC.
+          // service account. This step is necessary to ensure we have a
+          // credential for the right set of scopes, and that we're not running
+          // with end-user credentials.
           //
           this.applicationCredentials = ImpersonatedCredentials.create(
             defaultCredentials,
             impersonateServiceAccount,
             null,
-            Stream.of(
-                ResourceManagerClient.OAUTH_SCOPE,
-                PolicyAnalyzerClient.OAUTH_SCOPE,
-                AssetInventoryClient.OAUTH_SCOPE,
-                IamCredentialsClient.OAUTH_SCOPE,
-                SecretManagerClient.OAUTH_SCOPE,
-                DirectoryGroupsClient.OAUTH_SCOPE)
-              .distinct()
-              .collect(Collectors.toList()),
+            this.configuration.getRequiredOauthScopes().stream().toList(),
             0);
 
           //
@@ -361,12 +381,6 @@ public class RuntimeEnvironment {
   }
 
   @Produces
-  public PolicyAnalyzerRepository.Options getPolicyAnalyzerOptions() {
-    return new PolicyAnalyzerRepository.Options(
-      this.configuration.scope.getValue());
-  }
-
-  @Produces
   public MpaProjectRoleCatalog.Options getIamPolicyCatalogOptions() {
     return new MpaProjectRoleCatalog.Options(
       this.configuration.availableProjectsQuery.isValid()
@@ -376,15 +390,33 @@ public class RuntimeEnvironment {
       this.configuration.minNumberOfReviewersPerActivationRequest.getValue(),
       this.configuration.maxNumberOfReviewersPerActivationRequest.getValue());
   }
-//
-//  @Produces
-//  public EntitlementCatalog<ProjectRoleId> getCatalog(
-//    PolicyAnalyzer policyAnalyzer,
-//    ResourceManagerClient resourceManagerClient
-//  ) {
-//    return new IamPolicyCatalog(
-//      policyAnalyzer,
-//      resourceManagerClient,
-//      getIamPolicyCatalogOptions());
-//  }
+
+  @Produces
+  public DirectoryGroupsClient.Options getDirectoryGroupsClientOptions() {
+    return new DirectoryGroupsClient.Options(
+      this.configuration.customerId.getValue());
+  }
+
+  @Produces
+  @Singleton
+  public ProjectRoleRepository getProjectRoleRepository(
+    Executor executor,
+    Instance<DirectoryGroupsClient> groupsClient,
+    PolicyAnalyzerClient policyAnalyzerClient
+  ) {
+    switch (this.configuration.catalog.getValue()) {
+      case ASSETINVENTORY:
+        return new AssetInventoryRepository(
+          executor,
+          groupsClient.get(),
+          (AssetInventoryClient)policyAnalyzerClient,
+          new AssetInventoryRepository.Options(this.configuration.scope.getValue()));
+
+      case POLICYANALYZER:
+      default:
+        return new PolicyAnalyzerRepository(
+          policyAnalyzerClient,
+          new PolicyAnalyzerRepository.Options(this.configuration.scope.getValue()));
+    }
+  }
 }
